--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name"          : "backbone-decorator",
   "version"       : "0.1",
-  "main"          : "Backbone Decorator",
+  "main"          : "backbone-decorator.js",
   "dependencies"  : {
     "backbone"    : ">=1.1.2"
   },
